@@ -54,12 +54,7 @@ endif
 
 ifeq ($(DEB_HOST_ARCH_OS),linux)
 SYSTEMD_FLAGS = --with-systemd
-# --with-selinux needs libselinux 2.1.10
-# (we don't put that in debian/control so we can use the same source also on older dists)
-SEVERSION = $(shell dpkg-query -f '$${Version}' --show libselinux1-dev)
-ifeq ($(shell dpkg --compare-versions "$(SEVERSION)" ge 2.1.10 && echo yes),yes)
 SELINUX_FLAGS= --with-selinux
-endif
 endif
 
 COMMON_CONFIGURE_FLAGS= \
@@ -86,6 +81,7 @@ COMMON_CONFIGURE_FLAGS= \
   --with-system-tzdata=/usr/share/zoneinfo \
   $(LLVM_FLAGS) \
   $(SYSTEMD_FLAGS) \
+  $(SELINUX_FLAGS) \
   $(SPINLOCK_FLAGS) \
   CFLAGS='$(CFLAGS)' \
   LDFLAGS='$(LDFLAGS)'
@@ -129,8 +125,7 @@ stamp/configure-build:
            --with-includes=/usr/include/tcl$(TCL_VER) \
            PYTHON=/usr/bin/python \
            $(COMMON_CONFIGURE_FLAGS) \
-           $(BOOTSTRAP_FLAGS) \
-           $(SELINUX_FLAGS)
+           $(BOOTSTRAP_FLAGS)
 	# remove pre-built documentation
 	rm -fv doc/src/sgml/*-stamp
 	touch "$@"
